--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -52,7 +52,7 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: wheels_and_sdist
-          path: wheelhouse
+          path: dist
 
       - name: Publish to PyPI
         uses: pypa/gh-action-pypi-publish@v1.4.2
