--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,54 +14,54 @@ jobs:
 
     strategy:
       matrix:
-        os: [ ubuntu-20.04 ]
-        python-version: [ '3.6' ]
+        os: [ ubuntu-20.04, macOS-11, windows-2019 ]
+        python-version: [ '3.8' ]
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
 
-      - name: Cache/restore poetry lockfile
-        uses: actions/cache@v2
-        with:
-          path: .
-          key: deps-${{ hashFiles('poetry.lock') }}
-          restore-keys: deps-
-
-      - name: Install Dependencies and Cythonize extension
+      - name: Install Dependencies
         run: |
-          python3 -m pip install --upgrade pip setuptools wheel
-          pip install poetry
-          poetry install
+          python3 -m pip install --upgrade pip setuptools wheel cibuildwheel==2.12.3
+          pip install -r requirements-dev.txt
 
-      - name: Build wheel and source distribution
-        run: poetry build
+      - name: Build wheels
+        run: cibuildwheel --output-dir wheelhouse --config-file pyproject.toml
+
+      - name: Build source distribution
+        if: ${{ matrix.os == 'ubuntu-20.04' }}
+        run: |
+          python -m build --sdist
+          mv dist/*.gz wheelhouse
 
       - name: Store the wheelhouse directory
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v3
         with:
           name: wheels_and_sdist
-          path: dist
+          path: wheelhouse
           if-no-files-found: error
-
 
   upload_pypi:
     needs: [ build_wheels_and_sdist ]
     runs-on: ubuntu-20.04
+    environment:
+      name: pypi
+      url: https://pypi.org/p/pyloras
+    permissions:
+      id-token: write
     steps:
       - name: Pull built wheels and sdist
-        uses: actions/download-artifact@v2
+        uses: actions/download-artifact@v3
         with:
           name: wheels_and_sdist
           path: dist
 
       - name: Publish to PyPI
-        uses: pypa/gh-action-pypi-publish@v1.4.2
+        uses: pypa/gh-action-pypi-publish@v1.8.5
         with:
-          user: __token__
-          password: ${{ secrets.PYPI_TOKEN }}
           packages_dir: dist
