--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,14 +32,11 @@ source = "https://github.com/zoj613/pyloras"
 tracker = "https://github.com/zoj613/pyloras/issues"
 
 [build-system]
-requires = ["wheel", "setuptools>=61.0.0", "setuptools-scm"]
+requires = ["wheel", "setuptools>=61.0.0", "setuptools-scm[toml]>=6.2"]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools]
 packages = ["pyloras"]
-
-[tool.setuptools.dynamic]
-version = {attr = "pyloras.__version__"}
 
 [tool.setuptools_scm]
 write_to = "pyloras/_version.py"
